--- a/force-app/main/default/classes/ASF_CaseTriggerBUSpecificHandler.cls
+++ b/force-app/main/default/classes/ASF_CaseTriggerBUSpecificHandler.cls
@@ -8,15 +8,10 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
      */
     // INSERT CONTEXT - START HERE
     public override void executeBeforeASFCodeInBeforeInsert(List<SObject> newItems){
-        Id frameworkRTId = ASF_Constants.RT_FRAMEWORK;
-        ABFL_OwnerChangeWithLocation.checkCCCExternalIdAndAddRTId((List<Case>)newItems);
-        Map<ID,List<Case>> mRecordTypeVsCases1 = ASF_CaseDistributionBasedOnRT.getCaseByRecordType((List<Case>)newItems);
-        if(mRecordTypeVsCases1.containsKey(frameworkRTId)){
-            //AM-Validating case creation for different CTSTs against policy statuses for ABSLI.
-            ABSLI_BeforeInsertTriggerLogic.checkCreateCaseValidations(mRecordTypeVsCases1.get(frameworkRTId));
-            ABFL_CreateCaseProspectHelper.beforeInsertMethod(mRecordTypeVsCases1.get(frameworkRTId));
-            ABFL_OwnerChangeWithLocation.beforeInsertupdateSpoc(mRecordTypeVsCases1.get(frameworkRTId));
-        }
+        
+        ABFL_BUSpecificCaseHandler.executeBeforeASFCodeInBeforeInsert((List<Case>)newItems);
+        
+        ABSLI_BeforeInsertTriggerLogic.executeBeforeASFCodeInBeforeInsert((List<Case>)newItems);
     }
       
      /**
@@ -27,9 +22,9 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
         
         List<Case> newCaseList = (List<Case>)newItems;
         List<Case> newFrameworkCaseList = new List<Case>();
-        ABCL_CommonCLass commonCLssObj = new ABCL_CommonCLass();
-        ABHFL_CTSTHelper ctstHelperObj = new ABHFL_CTSTHelper();
-        ABCL_CaseDuplicateCheck dupeChecker = new ABCL_CaseDuplicateCheck();
+        
+        
+        
         ABSLI_BeforeInsertTriggerLogic.executeBeforeInsertLogic((List<Case>)newItems);
         for(Case caseRec : newCaseList) {
             String caseRecordTypeId = caseRec.RecordTypeId;
@@ -40,12 +35,16 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
         }
 
         if(newFrameworkCaseList.size() > 0) {
+            ABCL_CaseDuplicateCheck dupeChecker = new ABCL_CaseDuplicateCheck();
             dupeChecker.runDuplicateCheck(newFrameworkCaseList);
-            ctstHelperObj.prePopulateFields(newFrameworkCaseList);
+            
+            ABHFL_BUSpecificCaseHandler.executeAfterASFCodeInBeforeInsert(newFrameworkCaseList);
+            
             if(System.Label.PAY_SkipCustomerCreationOnCaseCreationAPI != 'true'){
                 PAY_CaseTriggerHelper.createCustomerForCreateCaseAPI((List<Case>)newItems);
             }
         }
+        ABCL_CommonCLass commonCLssObj = new ABCL_CommonCLass();
         commonCLssObj.prepopulateCaseFlds(newCaseList);
 
     }
@@ -55,8 +54,8 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
      * @param newItems - map of new cases
      */
     public override void executeBeforeASFCodeInAfterInsert(Map<Id, SObject> newItems){
-        ABHFL_CTSTHelper ctstHelperObj = new ABHFL_CTSTHelper();
-        ctstHelperObj.populateFieldsInAfterContext((List<Case>)newItems.values());
+        ABHFL_BUSpecificCaseHandler.executeBeforeASFCodeInAfterInsert((List<Case>)newItems.values());
+        ABSLI_AfterInsertLogic.executeAfterInsertLogic((List<Case>)newItems.values());
     }
 
     /**
@@ -64,19 +63,17 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
      * @param newItems - map of new cases
      */
     public override void executeAfterASFCodeInAfterInsert(Map<Id, SObject> newItems){
-        ABHFL_CTSTHelper ctstHelperObj = new ABHFL_CTSTHelper();
+
+        ABHFL_BUSpecificCaseHandler.executeAfterASFCodeInAfterInsert((List<Case>) newItems.values());
+
         ABSLIG_CaseDetailHelperClass absligCaseDetHelperObj = new ABSLIG_CaseDetailHelperClass();
 
         if(System.Label.PAY_SkipCustomerCreationOnCaseCreationAPI != 'true'){
             PAY_CaseTriggerHelper.fetchCustomerInfoExt((List<Case>)newItems.values());
         }
-        ABHFL_CTSTHelper.executeSpecificIntegrations((List<Case>)newItems.values(), new List<Case>());
-        ABFL_OwnerChangeWithLocation.afterInsertupdateSpoc((List<Case>)newItems.values());
-        //ABHFL_CTSTHelper.populateLANonDetail((List<Case>)newItems.values());
+        
+        ABFL_BUSpecificCaseHandler.executeAfterASFCodeInAfterInsert((Map<Id, Case>) newItems);
 
-        // Create Comment if the case is closed while creation.[through api]
-        ABFL_OwnerChangeWithLocation.createCaseCommentWhenClosedAfterInsert((List<Case>)newItems.values());
-        ctstHelperObj.ICAndPICEvaluationOnApiCall((List<Case>)newItems.values());
         absligCaseDetHelperObj.populateABSLIGCaseDetailFields((List<Case>)newItems.values());
     }
     // INSERT CONTEXT - ENDS HERE
@@ -99,12 +96,10 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
      * @param oldItems - map of old cases
      */
     public override void executeAfterASFCodeInBeforeUpdate(Map<Id, SObject> newItems, Map<Id, SObject> oldItems){
-        if(Label.ABHFL_Case_Dedupe_Active=='Active'){
-            ABHFL_CTSTHelper.runDuplicateCheckForUpdate((List<Case>)newItems.values(),(Map<Id, Case>)oldItems);    
-        }
-        ABHFL_CTSTHelper.preClosureStopAtCPUBanking((List<Case>)newItems.values(),(Map<Id, Case>)oldItems); 
-        ABHFL_CTSTHelper.updateSlaBrokenCheckOnStageMovement((List<Case>)newItems.values(),(Map<Id, Case>)oldItems);
-        ABFL_OwnerChangeWithLocation.updateCaseOwnerAtVerificationStage((Map<Id, Case>)newItems,(Map<Id, Case>)oldItems);
+        
+        ABHFL_BUSpecificCaseHandler.executeAfterASFCodeInBeforeUpdate((Map<Id, Case>)newItems,(Map<Id, Case>)oldItems);
+        
+        //ABFL_OwnerChangeWithLocation.updateCaseOwnerAtVerificationStage((Map<Id, Case>)newItems,(Map<Id, Case>)oldItems);
         ABSLI_BeforeUpdateAfterASFTriggerLogic.executeBeforeLogic((Map<Id, Case>)newItems, (Map<Id, Case>)oldItems);
     }
 
@@ -123,23 +118,12 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
      * @param oldItems - map of old cases
      */
     public override void executeAfterASFCodeInAfterUpdate(Map<Id, SObject> newItems, Map<Id, SObject> oldItems){
-        ABHFL_CTSTHelper.executeSpecificIntegrations((List<Case>)newItems.values(), (List<Case>)oldItems.values());
+        ABHFL_BUSpecificCaseHandler.executeAfterASFCodeInAfterUpdate((List<Case>)newItems.values(),(Map<Id,Case>)oldItems);
+
         ABSLIG_CaseDetailHelperClass absligCaseDetaHelpObj = new ABSLIG_CaseDetailHelperClass();
         
-        ABHFL_CTSTHelper ctstHelperObj = new ABHFL_CTSTHelper();
-        ctstHelperObj.callLitmusApi((List<Case>) newItems.values(), (Map<Id, Case>) oldItems);
 
-        //PR970457-417 ABFL - Customer survey through LITMUS
-        ABFL_InvokeLitmusProcess invokeLitmusProcessObj = new ABFL_InvokeLitmusProcess();
-        invokeLitmusProcessObj.evaluateCasesForLitmus((Map<Id, Case>) newItems, (Map<Id, Case>) oldItems);
-
-        ABHFL_CTSTHelper.OpenStageOwnershipChange((List<Case>)newItems.values(),(Map<Id, Case>)oldItems);
-        ABHFL_CTSTHelper.backwardMovementEmail((List<Case>)newItems.values(),(Map<Id, Case>)oldItems);
-        //AM-PR970457-1295
-        ABHFL_CTSTHelper.sendGrievanceDetailsEmail((List<Case>)newItems.values(),(Map<Id, Case>)oldItems);
-        //AM-call method to delete existing asset detail records on customer change
-        ABHFL_CTSTHelper.deleteExistingAssetDetails((List<Case>)newItems.values(),(Map<Id, Case>)oldItems);
-        ABFL_OwnerChangeWithLocation.updateSpocWrtLocation((List<Case>)newItems.values(),(Map<Id, Case>)oldItems);
+        ABFL_BUSpecificCaseHandler.executeAfterASFCodeInAfterUpdate((Map<Id, Case>) newItems, (Map<Id, Case>) oldItems);
         ABCL_InvokeOneABC.evaluateCasesForOneABC((Map<Id, Case>) newItems, (Map<Id, Case>) oldItems);
 
         absligCaseDetaHelpObj.populateABSLIGCaseDetailFieldsAfterCaseUpdate((List<Case>)newItems.values());
