--- a/force-app/main/default/classes/ABSLI_BeforeUpdateTriggerLogic.cls
+++ b/force-app/main/default/classes/ABSLI_BeforeUpdateTriggerLogic.cls
@@ -2,7 +2,7 @@
  * @description       : BSLI BeforeUpdateTrigger Logic Before ASF Code
  * @author            : ChangeMeIn@UserSettingsUnder.SFDoc
  * @group             : 
- * @last modified on  : 07-16-2024
+ * @last modified on  : 06-27-2024
  * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 **/
 public with sharing class ABSLI_BeforeUpdateTriggerLogic {
@@ -29,7 +29,7 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
         if(!mAbsliCases.isEmpty()){
             absliCasesAdditionalFields = new Map<Id, Case>([SELECT Id,Asset.Issue_Date__c,ABSLI_Case_Detail__c,CCC_External_Id__c, 
                                        ABSLI_Case_Detail__r.To_date__c, ABSLI_Case_Detail__r.From_date__c,CaseNumber,ABSLI_Case_Detail__r.IRDAI_Token_Number__c,Nature__c,Stage__c,Technical_Source__c,
-                                       ABSLI_Case_Detail__r.Complaint_Category__c,ABSLI_Case_Detail__r.Resolve_case__c,IGMS_Complaint_Type_Code__c,ABSLI_Case_Detail__r.IGMS_type_of_policy__c 
+                                       ABSLI_Case_Detail__r.Complaint_Category__c,ABSLI_Case_Detail__r.Resolve_case__c,IRDAI_Token_Number__c,IGMS_Complaint_Type_Code__c ,FTR__c
                                        FROM Case 
                                        WHERE Id IN :mAbsliCases.keySet()]);
             System.debug('Inside ABSLI before Update Trigger logic');
@@ -147,8 +147,9 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
         Map<Id, Case> eligibleCases = new Map<Id, Case>();
         if(mAbsliCases.keyset().size()>0){
             for(Case c : mAbsliCases.values()){
-                if(c.MoveToNext__c != oldMap.get(c.Id).MoveToNext__c 
-                && c.MoveToNext__c == true && c.Technical_Source__c != 'API' && c.Nature__c == 'Request'){
+                System.debug('Dhin'+oldMap.get(c.Id).MoveToNext__c );
+                System.debug('2'+c.MoveToNext__c);
+                if(c.MoveToNext__c != oldMap.get(c.Id).MoveToNext__c && c.MoveToNext__c == true && c.Technical_Source__c != 'API' && c.Nature__c == 'Request'){
                     eligibleCases.put(c.Id, c);
                 }
             }
@@ -217,14 +218,13 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
                         newMap.put(caseRec.Id,caseError);
                 }
                 if(caseRec.IGMS_Complaint_Type_Code__c != null &&
-                  	caseRec.Nature__c == 'Complaint' &&
-                    caseRec.ABSLI_Case_Detail__r.IRDAI_Token_Number__c != null && 
+                  	caseRec.Nature__c == 'Complaint' && 
                     caseRec.Technical_Source__c != 'API'){
-                	ABSLI_IGMSClassificationUtility.validationWrapper returnWrapper= ABSLI_IGMSClassificationUtility.validateCurrentSelection(mClassificationIGMS, caseRec);
-                	if(returnWrapper.bErrorOccured){
+                	//ABSLI_IGMSClassificationUtility.validationWrapper returnWrapper= ABSLI_IGMSClassificationUtility.validateCurrentSelection(mClassificationIGMS, caseRec);
+                        if(true){//returnWrapper.bErrorOccured){
                         Case caseError = newMap.get(caseRec.Id);
-                    	String errorMessage = returnWrapper.errorMessage;
-                    	caseError.addError(errorMessage);
+                    	//String errorMessage = returnWrapper.errorMessage;
+                    	//caseError.addError(errorMessage);
                 	}
                 
             	}
@@ -235,8 +235,8 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
     public static void checkCreateCaseValidations(List<Case> absliCases, Map<Id, Case> oldMap){
         Set<String> issueCodes = new Set<String>();
         List<Case> validCases = new List<Case>();
-        Map<Id,Case> policyIdVsCase = new Map<Id,Case>();
-        Map<Case,Asset> caseVsAsset = new Map<Case,Asset>();
+        Map<Id,Asset> caseIdVsPolicy = new Map<Id,Asset>();
+        Set<Id> policyIds = new Set<Id>();
         Id interactionRecTypeId = Schema.sObjectType.Case.getRecordTypeInfosByDeveloperName().get('Interaction').getRecordTypeId();
         Id frameworkRecordTypeId = Schema.sObjectType.Case.getRecordTypeInfosByDeveloperName().get('Framework').getRecordTypeId();
         for(Case c: absliCases){
@@ -244,13 +244,16 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
               	oldMap.get(c.Id).RecordTypeId == interactionRecTypeId && c.Preframework_to_Framework_FromUI__c == true){
             	issueCodes.add(c.CCC_External_Id__c);
                 validCases.add(c);
-                policyIdVsCase.put(c.AssetId,c);
+                policyIds.add(c.AssetId);
             }
         }
-        for(Asset policy: [SELECT Id, Status FROM Asset WHERE Id IN:policyIdVsCase.keySet()]){
-            caseVsAsset.put(policyIdVsCase.get(policy.Id),policy);
+        Map<Id, Asset> policyMap = new Map<Id, Asset>([SELECT Id, Status FROM Asset WHERE Id IN :policyIds]);
+        for(Case c: validCases){
+            if(policyMap.containsKey(c.AssetId)){
+                caseIdVsPolicy.put(c.Id,policyMap.get(c.AssetId));
+            }
         }
-        if(issueCodes.size()>0 && !caseVsAsset.isEmpty()){
+        if(issueCodes.size()>0 && !caseIdVsPolicy.isEmpty()){
             Map<String, ABSLI_Create_Case_Validations__mdt> issueCodeVsMdt = new Map<String, ABSLI_Create_Case_Validations__mdt>();
             List<ABSLI_Create_Case_Validations__mdt> validationMdtList = [SELECT Label,Business_Unit__c,Issue_Code__c,
                                              							   Operator__c,Asset_Values__c,Error_Message__c
@@ -269,12 +272,12 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
                     String oprtr = issueCodeVsMdt.get(cs.CCC_External_Id__c).Operator__c;
                     switch on oprtr{
                         when 'IN'{
-                            if((caseVsAsset.get(cs).Status!=null) && (!policyStatuses.contains(caseVsAsset.get(cs).Status.replaceAll('\\s*,\\s*', ',')))){
+                            if((caseIdVsPolicy.get(cs.Id).Status!=null) && (!policyStatuses.contains(caseIdVsPolicy.get(cs.Id).Status.replaceAll('\\s*,\\s*', ',')))){
                                 cs.addError(issueCodeVsMdt.get(cs.CCC_External_Id__c).Error_Message__c);
                             }
                         }
                         when 'NOT IN'{
-                            if((caseVsAsset.get(cs).Status!=null) && (policyStatuses.contains(caseVsAsset.get(cs).Status.replaceAll('\\s*,\\s*', ',')))){
+                            if((caseIdVsPolicy.get(cs.Id).Status!=null) && (policyStatuses.contains(caseIdVsPolicy.get(cs.Id).Status.replaceAll('\\s*,\\s*', ',')))){
                                 cs.addError(issueCodeVsMdt.get(cs.CCC_External_Id__c).Error_Message__c);
                             }
                         }
