Bulk case creation validation fix

--- a/force-app/main/default/classes/ASF_CaseTriggerBUSpecificHandler.cls
+++ b/force-app/main/default/classes/ASF_CaseTriggerBUSpecificHandler.cls
@@ -57,16 +57,8 @@ public class ASF_CaseTriggerBUSpecificHandler extends ASF_TriggerCustomEventHand
      * @param newItems - map of new cases
      */
     public override void executeBeforeASFCodeInAfterInsert(Map<Id, SObject> newItems){
-        ABHFL_CTSTHelper ctstHelperObj = new ABHFL_CTSTHelper();
-        ctstHelperObj.populateFieldsInAfterContext((List<Case>)newItems.values());
-        
-        Id frameworkRTId = ASF_Constants.RT_FRAMEWORK;
-        Map<ID,List<Case>> mRecordTypeVsCases1 = ASF_CaseDistributionBasedOnRT.getCaseByRecordType((List<Case>)newItems.values());
-        if(mRecordTypeVsCases1.containsKey(frameworkRTId)){
-        	//AM-Validating case creation for different CTSTs against policy statuses for ABSLI.
-        	ABSLI_AfterInsertLogic.checkCreateCaseValidations(mRecordTypeVsCases1.get(frameworkRTId)); 
-            ABSLI_AfterInsertLogic.executeAfterInsertLogic((List<Case>)newItems.values());   
-        }
+        ABHFL_BUSpecificCaseHandler.executeBeforeASFCodeInAfterInsert((List<Case>)newItems.values());
+        ABSLI_AfterInsertLogic.executeAfterInsertLogic((List<Case>)newItems.values());
     }
 
     /**
