Reports & IGMS Constants

--- a/force-app/main/default/classes/ABSLI_AckIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_AckIGMSComplaintIntegration.cls
@@ -202,8 +202,8 @@ public with sharing class ABSLI_AckIGMSComplaintIntegration implements ASF_Integ
         public objReq() {
             this.Complaint_Status_Id = '2';
             this.Status_Change_Date = ABCL_IntegrationCommonUtility.dateFormat(System.today(), 'dd-MM-YYYY');
-            this.Option = '1';
-            this.Mode = '2';
+            this.Option = ABSLI_Constants.ABSLI_IGMS_OPTION;
+            this.Mode = ABSLI_Constants.ABSLI_IGMS_OPTION;
             this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
             this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
         }
