--- a/force-app/main/default/classes/ABSLI_AttendEscIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_AttendEscIGMSComplaintIntegration.cls
@@ -299,8 +299,8 @@ public with sharing class ABSLI_AttendEscIGMSComplaintIntegration  implements AS
             this.Date_Of_Honoring_Service  = ABCL_IntegrationCommonUtility.dateFormat(System.today(), 'dd-MM-YYYY');
             this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
             this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
-            this.Option = '1';
-            this.Mode = '2';
+            this.Option = ABSLI_Constants.ABSLI_IGMS_OPTION;
+            this.Mode = ABSLI_Constants.ABSLI_IGMS_OPTION;
         }
     }
     /**
