--- a/force-app/main/default/classes/ABSLI_EscalatedIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_EscalatedIGMSComplaintIntegration.cls
@@ -192,8 +192,8 @@ public with sharing class ABSLI_EscalatedIGMSComplaintIntegration implements ASF
             this.Escalated_Date = ABCL_IntegrationCommonUtility.dateFormat(System.today(), 'dd-MM-YYYY');
             this.Addressed_To_Insurer = ABSLI_Constants.ABSLI_IGMS_ADDRESS_TO_INSURER_Y;
             this.Trans_Login_Id = ABSLI_Constants.ABSLI_IGMS_TRANS_LOGIN_ID;
-            this.Option = '1';
-            this.Mode = '2';
+            this.Option = ABSLI_Constants.ABSLI_IGMS_OPTION;
+            this.Mode = ABSLI_Constants.ABSLI_IGMS_OPTION;
         }
     }
     /**
