GST data type changed to Integer

--- a/force-app/main/default/classes/ABHFL_PaymentLinkHandler.cls
+++ b/force-app/main/default/classes/ABHFL_PaymentLinkHandler.cls
@@ -127,13 +127,13 @@ public with sharing class ABHFL_PaymentLinkHandler implements ASF_IntegrationInv
         string smsTemplate = '';    
         String emailTemplate = '';   
         String paymentCode = '';
-        Decimal GST;
+        Integer GST;
         if(docChargeMdtLst.size() > 0){
             emailTemplate = docChargeMdtLst[0].Email_Template__c;
             smsTemplate = docChargeMdtLst[0].SMS_Template__c;
             callPaymentLink = docChargeMdtLst[0].Call_Payment_Link__c;
             paymentCode = docChargeMdtLst[0].Payment_Code__c;
-            GST=docChargeMdtLst[0].GST__c;
+            GST=integer.valueof(docChargeMdtLst[0].GST__c);
         }         
         String integrationResponse = ABHFL_Constants.FAILURE;
 
