GST data type changes

--- a/force-app/main/default/classes/ABHFL_PaymentLinkHandler.cls
+++ b/force-app/main/default/classes/ABHFL_PaymentLinkHandler.cls
@@ -262,7 +262,7 @@ public with sharing class ABHFL_PaymentLinkHandler implements ASF_IntegrationInv
         public Integer impactType;
         public string salesId;
 
-        public PaytmRequestWrapper(Case caseRecord){
+        public PaytmRequestWrapper(Case caseRecord,Integer GST){
             List<Contact> con = [SELECT Id, Email FROM Contact WHERE AccountId=:caseRecord.AccountId LIMIT 1];
             this.custname = caseRecord.Customer_name_formula__c;
             this.LAN = caseRecord.Asset.LAN__c;
